<resources>
    <string name="app_name">Paketin Seuranta</string>
    <string name="delivered" translatable="false">DELIVERED</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_parcel">Parcel</string>
    <string name="title_activity_maps">Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="last_updated_beginning_part">Data updated:</string>
    <string name="last_updated_beginning_part_not_found">Data update failed:</string>
    <string name="package_not_found">Parcel not found!</string>
    <string name="delivered_in">DELIVERED IN</string>
    <string name="delivered_only">DELIVERED</string>
    <string name="menu_menu_update_tracking_details">Update tracking data</string>
    <string name="menu_menu_rate_application">Rate app</string>
    <string name="menu_menu_barcode_list">Barcode list</string>
    <string name="menu_menu_archive">Archived</string>
    <string name="menu_menu_user_manual">User manual</string>
    <string name="menu_menu_settings">Settings</string>
    <string name="menu_menu_destroy_process">Destroy process</string>
    <string name="menu_menu_watch_ad">Watch ad</string>
    <string name="menu_menu_contact">Contact</string>
    <string name="menu_menu_about">About</string>
    <string name="menu_menu_backup">Backup</string>
    <string name="menu_archive_update_list">Update list</string>
    <string name="menu_archive_hints">Hints</string>
    <string name="menu_parcel_edit_information">Edit details</string>
    <string name="menu_parcel_copy_to_clipboard">Code to clipboard</string>
    <string name="menu_parcel_take_package_image">Take package image</string>
    <string name="menu_parcel_hints">Hints</string>
    <string name="activity_barcode_list_list_only_ready_for_pickup">List only ready for pickup ones</string>
    <string name="activity_barcode_lists_spaces_minus_button">Spaces -</string>
    <string name="activity_barcode_list_spaces_plus_button">Spaces +</string>
    <string name="activity_main_menu_add_without_tracking_code_button">Add new tracked delivery</string>
    <string name="activity_main_menu_archive_button">Archive</string>
    <string name="activity_main_menu_scan_code_button">Scan parcel code</string>
    <string name="activity_main_menu_add_tracking_codes_button">Add multiple parcel codes</string>
    <string name="add_code_dialog_add_tracking_codes">Add parcel codes</string>
    <string name="add_code_dialog_add_tracking_codes_here">Paste tracking codes here. One for each line!</string>
    <string name="add_code_dialog_add_tracking_codes_hint">Note that tracking codes should not have spaces at the end</string>
    <string name="add_code_dialog_paste_button">Paste</string>
    <string name="add_code_dialog_add_button">ADD</string>
    <string name="content_parcel_tracking_code_title">Tracking code</string>
    <string name="content_parcel_locker_code_title">Locker code</string>
    <string name="content_parcel_parcel_events_title">Parcel events</string>
    <string name="content_parcel_no_parcel_events_title">No parcel events</string>
    <string name="content_parcel_other_information_title">Other details</string>
    <string name="package_edit_dialog_name_package_title">Package name</string>
    <string name="package_edit_dialog_name_package_hint">Give name, example Electronics</string>
    <string name="package_edit_dialog_locker_code_title">Locker code</string>
    <string name="package_edit_dialog_locker_code_hint">Locker code, example L1234</string>
    <string name="package_edit_dialog_change_courier_company_title">Courier service</string>
    <string name="package_edit_dialog_change_tracking_code_title">Tracking number</string>
    <string name="package_edit_dialog_tracking_code_hint">Tracking code</string>
    <string name="package_edit_dialog_sender_title">Sender</string>
    <string name="package_edit_dialog_sender_hint">Sender information</string>
    <string name="package_edit_dialog_delivery_method_title">Shipping method</string>
    <string name="package_edit_dialog_delivery_method_hint">Input delivery method</string>
    <string name="package_edit_dialog_button_close">Cancel</string>
    <string name="package_edit_dialog_button_save">Save</string>
    <string name="swipe_left_delete_delete_text">REMOVE</string>
    <string name="swipe_right_archive_archive_text">Archive</string>
    <string name="swipe_right_delete_delete_text">REMOVE</string>
    <string name="swipe_right_return_return_button">Restore</string>
    <string name="widget_status_title">Status</string>
    <string name="main_menu_snackbar_message_updated">updated</string>
    <string name="main_menu_add_tracking_codes_title">Add codes</string>
    <string name="main_menu_add_tracking_codes_your_clipboard_is_empty">Your clipboard is empty!</string>
    <string name="main_menu_scanned_text">Scanned:</string>
    <string name="main_menu_update_in_progress_try_again_later">Update in progress, try again later!</string>
    <string name="main_menu_code_copied_to_your_clipboard">Code copied to your clipboard!</string>
    <string name="main_menu_long_click_function_selection_not_made_on_settings">Long click action is not selected. Change selection behaviour at settings.</string>
    <string name="main_menu_did_not_get_event_statuses_try_again_later">Did not get event information. Try again!</string>
    <string name="main_menu_field_is_empty">Field is empty!</string>
    <string name="main_menu_item_not_added_because_it_already_existed_on_list">was not added because it\'s already on the list</string>
    <string name="main_menu_item_not_updated_because_it_already_existed_on_list">tracking code already exists</string>
    <string name="main_menu_cannot_delete_updating_packages_data">Updating events data, cannot delete at the moment!</string>
    <string name="main_menu_deletion_title">Delete</string>
    <string name="main_menu_you_are_about_to_delete_following_package_from_list">You are about to delete tracked item from list. Do you want to continue?\n\nNote: You can also archive package via swiping from left to right.</string>
    <string name="main_menu_you_are_about_to_delete_following_package_from_list_shorter">You are about to delete tracked item from list. Do you want to continue?</string>
    <string name="main_menu_give_package_name_dialog">Give package name</string>
    <string name="main_menu_accept">Accept</string>
    <string name="main_menu_error">Error</string>
    <string name="main_menu_you_did_not_input_anything">You did not imput anything</string>
    <string name="main_menu_return">Return</string>
    <string name="main_menu_list_is_empty_nothing_to_update">Your list is empty, nothing to update</string>
    <string name="main_menu_updating">Updating…</string>
    <string name="main_menu_your_list_is_empty">List is empty.</string>
    <string name="main_menu_close">Close</string>
    <string name="main_menu_cancel">Cancel</string>
    <string name="main_menu_restore_from_backup">Restore from backup</string>
    <string name="main_menu_restore_successfull">Restore successful. App must be restarted!</string>
    <string name="main_menu_restore_un_successfull">Restoring from backup failed</string>
    <string name="main_menu_take_backup_with_this_tool_text">With this tool you can take backup from internal database or restore taken backup. Feature requires access to your phones internal storage, where app can save backup file. After giving permission run this feature again.</string>
    <string name="main_menu_take_backup">Take backup</string>
    <string name="main_menu_result">Result</string>
    <string name="main_menu_taking_backup_was_successfull_for_following_directory">Taking backup was successful. File is saved on location:</string>
    <string name="main_menu_taking_backup_failed">Taking backup failed. This happens sometimes when app was creating required folders but it took too long time. Run this feature again.</string>
    <string name="archive_title">Archive</string>
    <string name="archive_delete_title">Delete</string>
    <string name="archive_delete_description">You are about to delete archived item. Do you want to continue?</string>
    <string name="preferences_default_title">Basic settings</string>
    <string name="preferences_timed_update_title">Timed updating</string>
    <string name="preferences_timed_update_summary">Take timed updating in use or not</string>
    <string name="preferences_update_rate_title">Package updating time interval (hours)</string>
    <string name="preferences_update_rate_summary">Set\'s automatic update interval, when package details are being updated</string>
    <string name="preferences_notifications_title">Take notifications in use</string>
    <string name="preferences_notifications_summary">When package details gets a change, give me notification about it. Requires automatic update interval settings to be on!</string>
    <string name="preferences_update_on_startup_title">Update package details on app launch</string>
    <string name="preferences_update_on_startup_summary">If you have lots of packages on your list, this settings may cause app hanging.</string>
    <string name="preferences_individual_update_notes_title">Individual update notifications</string>
    <string name="preferences_individual_update_notes_summary">Show individual update notification (snackbar) after every parcel item update event.</string>
    <string name="preferences_long_click_item_title">Long click action</string>
    <string name="preferences_long_click_item_summary">Choose what long click does on main screen</string>
    <string name="preferences_update_failed_first_title">Update failed first</string>
    <string name="preferences_update_failed_first_summary">Update first packages which failed to update on last time.</string>
    <string name="preferences_theme_title">Theme</string>
    <string name="preferences_theme_summary">Select theme for app</string>
    <string name="preferences_settings_title">Settings</string>
    <string name="preferences_override_language_title">Override language</string>
    <string name="preferences_override_language_summary">Language changes based on phone default language. With this setting you can override default logic and set specific language</string>
    <string name="csv_export_layout_export_button">Export</string>
    <string name="csv_export_layout_csv_export_properties_title">CSV export options</string>
    <string name="csv_export_layout_csv_export_properties_summary">Choose what fields to export on CSV export. CSV file will be exported to your phone storage PaketinSeuranta/CSV folder</string>
    <string name="csv_export_layout_name">Name</string>
    <string name="csv_export_layout_tracking_code">Tracking code</string>
    <string name="csv_export_layout_sender">Sender</string>
    <string name="csv_export_layout_delivery_method">Delivery method</string>
    <string name="csv_export_layout_code_add_date">Code add date</string>
    <string name="csv_export_layout_last_status">Last parcel event</string>
    <string name="csv_export_layout_ready_for_pickup_date">Ready for pickup date</string>
    <string name="menu_parcel_carrier_detector_tool">Carrier detector</string>
    <string name="menu_parcel_archive_package">Archive package</string>
    <string name="menu_parcel_delete_package">Delete package</string>
    <string name="package_edit_dialog_product_page">Product page</string>
    <string name="clear_events">Clear events</string>
    <string name="preferences_parcel_wipe_change_title">Parcel swipe change</string>
    <string name="preferences_parcel_swipe_change_description">Turn parcel swipe change on or off. Swipe works badly on some devices.</string>
    <string name="database_backup_title">Backup</string>
    <string name="timed_back_up_toggle">Timed backup</string>
    <string name="settings_tweaks">Tweaks</string>
</resources>