<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nitramite.paketinseuranta.Parcel">

    <item
        android:id="@+id/action_edit_package"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_parcel_edit_information"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_clipboard"
        android:icon="@drawable/ic_clip_board_icon"
        android:title="@string/menu_parcel_copy_to_clipboard"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_take_image"
        android:icon="@drawable/ic_camera_icon"
        android:title="@string/menu_parcel_take_package_image"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_carrier_detector"
        android:title="@string/menu_parcel_carrier_detector_tool"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_archive_package"
        android:title="@string/menu_parcel_archive_package"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_package"
        android:title="@string/menu_parcel_delete_package"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_events"
        android:title="@string/clear_events"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/menu_parcel_hints"
        app:showAsAction="never" />

</menu>
