<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="1dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/csv_export_layout_csv_export_properties_title"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/csv_export_layout_csv_export_properties_summary"
                android:textAlignment="center"
                android:textSize="15sp" />


            <!-- CSV fields -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessLeaf">

                <CheckBox
                    android:id="@+id/nameCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_name" />

                <CheckBox
                    android:id="@+id/trackingCodeCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_tracking_code" />

                <CheckBox
                    android:id="@+id/senderCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_sender" />

                <CheckBox
                    android:id="@+id/deliveryMethodCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_delivery_method" />

                <CheckBox
                    android:id="@+id/parcelAddDateCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_code_add_date" />

                <CheckBox
                    android:id="@+id/lastParcelEventCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_last_status" />

                <CheckBox
                    android:id="@+id/readyForPickupDateCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/csv_export_layout_ready_for_pickup_date" />

                <CheckBox
                    android:id="@+id/productPageCB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/package_edit_dialog_product_page" />

            </LinearLayout>


            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dismissBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_close"
                    android:textColor="#9e9e9e"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/exportBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/csv_export_layout_export_button"
                    android:textColor="#9e9e9e"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
