<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="1dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/database_backup_title"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/main_menu_take_backup_with_this_tool_text"
                android:textAlignment="center"
                android:textSize="15sp" />

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:alignContent="stretch"
                app:alignItems="stretch"
                app:flexWrap="wrap">

                <CheckBox
                    android:id="@+id/timedBackupToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:enabled="true"
                    android:text="@string/timed_back_up_toggle"
                    tools:ignore="UnusedAttribute"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/takeBackupBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_take_backup"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/restoreBackupBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_restore_from_backup"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/closeBtn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_menu_cancel"
                    android:textSize="15sp" />

            </com.google.android.flexbox.FlexboxLayout>

        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
