<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_code_dialog_add_tracking_codes_hint"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/addTrackingCodesInput"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/add_code_dialog_add_tracking_codes_here"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:scrollIndicators="right"
            tools:ignore="Autofill,UnusedAttribute" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addPasteBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_code_dialog_paste_button" />

            <Button
                android:id="@+id/addAddBtn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/package_edit_dialog_button_save"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>